<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ETA Now Native</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="header">ETA Games @ Cineplex</string>
    <string name="header_subtitle">All the latest games &amp; accessories</string>
    <string name="phone_text">HP:\ </string>
    <string name="phone_value"><u>+6738759949</u></string>
    <string name="opening_hours_text">Opening Hours:\ </string>
    <string name="loading_text">Loading..</string>
    <string name="thumbnail_image_text">Thumbnail</string>
    <string name="opening_hours">10:30am - 10:00pm</string>
    <string name="address">3.03, The Mall, Gadong, Brunei</string>
    <string name="btn_images_high">Load High Resolution Images</string>
    <string name="btn_images_low">Load Low Resolution Images</string>
    <string name="btn_facebook_text">Go to Facebook page for more</string>
    <string name="facebook_url">https://www.facebook.com/etagames</string>
    <string name="disclaimer">The ETA News Native is an unofficial app developed by @thewheat and is not endorsed by ETA Games @ Cineplex</string>
    <string name="title_activity_main_activity2">MainActivity2</string>

</resources>
