<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/header"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/app_bgcolor"
    android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:background="@color/card_bgcolor" >

                <ImageView
                    android:id="@+id/imageBackground"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_launcher" />

                <LinearLayout
                    android:id="@+id/sectionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/header"
                        android:textColor="@color/text"
                        android:textSize="@dimen/text_header_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/header_subtitle"
                        android:textColor="@color/text" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/phone_text"
                            android:textColor="@color/text" />

                        <TextView
		                    android:id="@+id/phoneValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/phone_value"
                            android:textColor="@color/link" 
                            android:textColorLink="@color/link" 
                            />
                            <!--   android:autoLink="all" -->
                        </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/opening_hours_text" 
                            android:textColor="@color/text" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/opening_hours" 
                            android:textColor="@color/text" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address" 
                        android:textColor="@color/text" />
                </LinearLayout>
            </RelativeLayout>
            <LinearLayout
                android:id="@+id/feature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >


                <Button
                    android:id="@+id/btnImageHigh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_images_high" />

                <Button
                    android:id="@+id/btnImageLow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_images_low" />

                <Button
                    android:id="@+id/btnFacebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_facebook_text" />

                <TextView
                    android:id="@+id/txtLoading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
					android:textColor="@color/text"
                    android:text="@string/loading_text" />
                
            </LinearLayout>

    
    </LinearLayout>
        


</LinearLayout>
